k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 3001         # порт по якому можна звератись до сервісу
      targetPort: 3001 # порт контейнера
  selector:
    app: api
