k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pichupido-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/payment     # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: payment-service # ім'я сервісу
                port:
                  number: 8080           # порт на якому запущено сервіс
          - path: /api      # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: api-service # ім'я сервісу
                port:
                  number: 3001           # порт на якому запущено сервіс
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
