k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-virtual
spec:
  hosts:
    - payment-service
  http:
    - route:
        - destination:
            host: payment-service
      timeout: 3s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 3s
